--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     
     <script>
         // 교수님의 Teachable Machine 모델 URL
-        const URL = "https://teachablemachine.withgoogle.com/models/0jOw0kemK/";
+        const URL = "https://teachablemachine.withgoogle.com/models/n4Ozf5wFD/";
         
         let model;
         const uploadArea = document.getElementById('uploadArea');
@@ -354,4 +354,5 @@
         });
     </script>
 </body>
+
 </html>
